[package]
name = "commit.rs"
version = "0.1.0"
authors = ["Foskel <fredank@tutamail.com>"]
include = ["**/*.rs", "Cargo.toml", "README.md"]
license = "AML"
description = "A POSIX-inspired command interpreter"
keywords = ["commands", "posix"]
repository = "https://github.com/foskel/commit"
readme = "README.md"